use setters and getters for Input props

--- a/apps/docs/src/app/core/component-docs/object-status/examples/object-status-text-example.component.html
+++ b/apps/docs/src/app/core/component-docs/object-status/examples/object-status-text-example.component.html
@@ -1,4 +1,5 @@
-<fd-object-status [status]="'negative'" style="margin-right: 20px;">Negative</fd-object-status>
-<fd-object-status [status]="'critical'" style="margin-right: 20px;">Critical</fd-object-status>
-<fd-object-status [status]="'positive'" style="margin-right: 20px;">Positive</fd-object-status>
-<fd-object-status [status]="'informative'" style="margin-right: 20px;">Informative</fd-object-status>
+<span fd-object-status [status]="'negative'">Negative</span>
+<span fd-object-status [status]="'critical'">Critical</span>
+<span fd-object-status [status]="'positive'">Positive</span>
+<span fd-object-status [status]="'informative'">Informative</span>
+<span fd-object-status>Default</span>
