--- a/apps/docs/src/app/core/component-docs/object-status/object-status-header/object-status-header.component.html
+++ b/apps/docs/src/app/core/component-docs/object-status/object-status-header/object-status-header.component.html
@@ -1,11 +1,8 @@
 <header>Object Status</header>
 <description>
-    <p>Object Status are used to indicate status. Colors, generally in combination with text, numeric and icon, are used to easily
-        highlight.</p>
-    <p> - Black is used to indicate default or inactive status </p>
-    <p> - It is primarily used to define the characterstic of the object</p>
-    <p> - Object Status is a small non-interactive numeric or text based control</p>
-    <p> - Generic indication colors can be used for industry specific color coding</p>
+    <p>
+    Object Status is replacing the Label Status Indicator and Badges (now Inverted Object Status). It’s used for representing a status. The status can be set to <code>positive</code>, <code>informative</code>, <code>critical</code> and <code>negative</code>. If you omit this property the default status will be applied.</p>
+    <p>Generic indication colors with values from 1 to 8 can be used for industry specific color coding.</p>
 </description>
 <import module="ObjectStatusModule"></import>
 
