--- a/apps/docs/src/app/core/component-docs/object-status/examples/object-status-default-example.component.html
+++ b/apps/docs/src/app/core/component-docs/object-status/examples/object-status-default-example.component.html
@@ -1,1 +1,5 @@
-<fd-object-status>default label</fd-object-status>
+<span fd-object-status [glyph]="'to-be-reviewed'"></span>
+<span fd-object-status [status]="'negative'" [glyph]="'status-negative'"></span>
+<span fd-object-status [status]="'critical'" [glyph]="'status-critical'"></span>
+<span fd-object-status [status]="'positive'" [glyph]="'status-positive'"></span>
+<span fd-object-status [status]="'informative'" [glyph]="'hint'"></span>
