--- a/apps/docs/src/app/core/component-docs/object-status/examples/object-status-generic-text-example.component.html
+++ b/apps/docs/src/app/core/component-docs/object-status/examples/object-status-generic-text-example.component.html
@@ -1,3 +1,3 @@
-<div style="margin-top: 10px;" *ngFor="let item of [1,2,3,4,5,6,7,8]">
-  <fd-object-status [color]="item">Object Status</fd-object-status>
-</div>
+<ng-templete *ngFor="let item of [1,2,3,4,5,6,7,8]">
+  <span fd-object-status [indicationColor]="item">Indication Color {{item}}</span>
+</ng-templete>
