--- a/apps/docs/src/app/core/component-docs/object-status/examples/object-status-icon-text-example.component.html
+++ b/apps/docs/src/app/core/component-docs/object-status/examples/object-status-icon-text-example.component.html
@@ -1,5 +1,5 @@
-<fd-object-status [status]="'negative'" [glyph]="'status-negative'" style="margin-right: 20px;">Negative</fd-object-status>
-<fd-object-status [status]="'critical'" [glyph]="'status-critical'" style="margin-right: 20px;">critical</fd-object-status>
-<fd-object-status [status]="'positive'" [glyph]="'status-positive'" style="margin-right: 20px;">positive</fd-object-status>
-<fd-object-status [status]="'informative'" [glyph]="'hint'" style="margin-right: 20px;">informative</fd-object-status>
-<fd-object-status [glyph]="'to-be-reviewed'" style="margin-right: 20px;">default label</fd-object-status>
+<span fd-object-status [status]="'negative'" [glyph]="'status-negative'">Negative</span>
+<span fd-object-status [status]="'critical'" [glyph]="'status-critical'">Critical</span>
+<span fd-object-status [status]="'positive'" [glyph]="'status-positive'">Positive</span>
+<span fd-object-status [status]="'informative'" [glyph]="'hint'">Informative</span>
+<span fd-object-status [glyph]="'to-be-reviewed'">Default</span>
