--- a/apps/docs/src/app/core/component-docs/object-status/examples/object-status-inverted-example.component.html
+++ b/apps/docs/src/app/core/component-docs/object-status/examples/object-status-inverted-example.component.html
@@ -1,7 +1,37 @@
-<fd-object-status [inverted]="true" [status]="'negative'" style="margin-right: 20px;">negative</fd-object-status>
-<fd-object-status [inverted]="true" [status]="'critical'" style="margin-right: 20px;">critical</fd-object-status>
-<fd-object-status [inverted]="true" [status]="'positive'" style="margin-right: 20px;">positive</fd-object-status>
-<fd-object-status [inverted]="true" [status]="'informative'" style="margin-right: 20px;">informative</fd-object-status>
-<fd-object-status [inverted]="true" style="margin-right: 20px;">Inverted Default</fd-object-status>
-<fd-object-status [inverted]="true" [status]="'negative'" style="margin-right: 20px;">negative</fd-object-status>
-<fd-object-status [inverted]="true" [status]="'critical'" style="margin-right: 20px;">critical</fd-object-status>
+<span fd-object-status [status]="'negative'" [glyph]="'status-negative'" [inverted]="true"></span>
+<span fd-object-status [status]="'critical'" [glyph]="'status-critical'" [inverted]="true"></span>
+<span fd-object-status [status]="'positive'" [glyph]="'status-positive'" [inverted]="true"></span>
+<span fd-object-status [status]="'informative'" [glyph]="'hint'" [inverted]="true"></span>
+<span fd-object-status [glyph]="'to-be-reviewed'" [inverted]="true"></span>
+
+<br><br>
+
+<span fd-object-status [status]="'negative'" [inverted]="true">Negative</span>
+<span fd-object-status [status]="'critical'" [inverted]="true">Critical</span>
+<span fd-object-status [status]="'positive'" [inverted]="true">Positive</span>
+<span fd-object-status [status]="'informative'" [inverted]="true">Informative</span>
+<span fd-object-status [inverted]="true">Default</span>
+
+<br><br>
+
+<span fd-object-status [status]="'negative'" [inverted]="true">5</span>
+<span fd-object-status [status]="'critical'" [inverted]="true">20</span>
+<span fd-object-status [status]="'positive'" [inverted]="true">2.99</span>
+<span fd-object-status [status]="'informative'" [inverted]="true">10</span>
+<span fd-object-status [inverted]="true">99+</span>
+
+<br><br>
+
+<span fd-object-status [status]="'negative'" [glyph]="'status-negative'" [inverted]="true">Negative</span>
+<span fd-object-status [status]="'critical'" [glyph]="'status-critical'" [inverted]="true">Critical</span>
+<span fd-object-status [status]="'positive'" [glyph]="'status-positive'" [inverted]="true">Positive</span>
+<span fd-object-status [status]="'informative'" [glyph]="'hint'" [inverted]="true">Informative</span>
+<span fd-object-status [glyph]="'to-be-reviewed'" [inverted]="true">Default</span>
+
+<br><br>
+
+<a fd-object-status [status]="'negative'" [glyph]="'status-negative'" [clickable]="true" [inverted]="true">Negative</a>
+<a fd-object-status [status]="'critical'" [glyph]="'status-critical'" [clickable]="true" [inverted]="true">Critical</a>
+<a fd-object-status [status]="'positive'" [glyph]="'status-positive'" [clickable]="true" [inverted]="true">Positive</a>
+<a fd-object-status [status]="'informative'" [glyph]="'hint'" [clickable]="true" [inverted]="true">Informative</a>
+<a fd-object-status [glyph]="'to-be-reviewed'" [clickable]="true" [inverted]="true">Default</a>
