updating the doc sec of the code
updating the doc sec of the code

--- a/apps/docs/src/app/platform/component-docs/platform-combobox/platform-combobox-examples/platform-combobox-types-default-example.component.html
+++ b/apps/docs/src/app/platform/component-docs/platform-combobox/platform-combobox-examples/platform-combobox-types-default-example.component.html
@@ -1,2 +1,1 @@
-<fdp-select class="fd-select-popover-custom fd-popover-custom" [(value)]="selectedValue" [placeholder]="'select from me'" [list]="option">
-</fdp-select>
+<fdp-combo-box></fdp-combo-box>
