--- a/libs/core/src/lib/info-label/info-label.component.html
+++ b/libs/core/src/lib/info-label/info-label.component.html
@@ -1,3 +1,3 @@
-<span class="fd-info-label" [ngClass]="buildCustomCss">
+<span class="fd-info-label" [ngClass]="buildComponentCssClass">
   <ng-content></ng-content>
 </span>
