--- a/libs/core/src/lib/info-label/info-label.component.html
+++ b/libs/core/src/lib/info-label/info-label.component.html
@@ -1,3 +1,1 @@
-<span class="fd-info-label" [ngClass]="buildComponentCssClass">
-	<ng-content></ng-content>
-</span>
+<span class="fd-info-label" [ngClass]="buildComponentCssClass"><ng-content></ng-content></span>
