--- a/apps/docs/src/app/core/component-docs/dialog/examples/dialog-position/dialog-position-example.component.html
+++ b/apps/docs/src/app/core/component-docs/dialog/examples/dialog-position/dialog-position-example.component.html
@@ -12,13 +12,15 @@
         </fd-dialog-body>
 
         <fd-dialog-footer>
-            <button fd-button
-                    fdType="emphasized"
-                    fd-dialog-decisive-button
-                    [compact]="true"
-                    (click)="dialog.close()">
-                Interesting
-            </button>
+            <fd-dialog-footer-button>
+                <button fd-button
+                        fdType="emphasized"
+                        fd-dialog-decisive-button
+                        [compact]="true"
+                        (click)="dialog.close()">
+                    Interesting
+                </button>
+            </fd-dialog-footer-button>
         </fd-dialog-footer>
 
     </fd-dialog>
