--- a/apps/docs/src/app/core/component-docs/dialog/examples/dialog-state/dialog-state-example.component.html
+++ b/apps/docs/src/app/core/component-docs/dialog/examples/dialog-state/dialog-state-example.component.html
@@ -10,13 +10,15 @@
         </fd-dialog-body>
 
         <fd-dialog-footer>
-            <button fd-button
-                    fdType="emphasized"
-                    fd-dialog-decisive-button
-                    [compact]="true"
-                    (click)="dialog.close()">
-                Ok
-            </button>
+            <fd-dialog-footer-button>
+                <button fd-button
+                        fdType="emphasized"
+                        fd-dialog-decisive-button
+                        [compact]="true"
+                        (click)="dialog.close()">
+                    Ok
+                </button>
+            </fd-dialog-footer-button>
         </fd-dialog-footer>
 
     </fd-dialog>
