--- a/apps/docs/src/app/core/component-docs/dialog/examples/template-based/template-based-dialog-example.component.html
+++ b/apps/docs/src/app/core/component-docs/dialog/examples/template-based/template-based-dialog-example.component.html
@@ -11,20 +11,24 @@
         </fd-dialog-body>
 
         <fd-dialog-footer>
-            <button fd-button
-                    fdType="transparent"
-                    fd-dialog-decisive-button
-                    [compact]="true"
-                    (click)="dialog.dismiss('Cancel')">
-                Cancel
-            </button>
-            <button fd-button
-                    fdType="emphasized"
-                    fd-dialog-decisive-button
-                    [compact]="true"
-                    (click)="dialog.close('Continue')">
-                Interested
-            </button>
+            <fd-dialog-footer-button>
+                <button fd-button
+                        fdType="transparent"
+                        fd-dialog-decisive-button
+                        [compact]="true"
+                        (click)="dialog.dismiss('Cancel')">
+                    Cancel
+                </button>
+            </fd-dialog-footer-button>
+            <fd-dialog-footer-button>
+                <button fd-button
+                        fdType="emphasized"
+                        fd-dialog-decisive-button
+                        [compact]="true"
+                        (click)="dialog.close('Continue')">
+                    Interested
+                </button>
+            </fd-dialog-footer-button>
         </fd-dialog-footer>
 
     </fd-dialog>
