--- a/apps/docs/src/app/core/component-docs/dialog/dialog-docs-header/dialog-docs-header.component.html
+++ b/apps/docs/src/app/core/component-docs/dialog/dialog-docs-header/dialog-docs-header.component.html
@@ -9,14 +9,14 @@
         Dialogs make use of a singleton service called DialogService. It provides the ability to open() dialog windows.
     </p>
     <p>
-        The open() method accepts either a TemplateRef or Component as dialog content. In addition, you may optionally
+        The open() method accepts either a TemplateRef or Component as dialog content. In addition, you may also
         provide a DialogConfig object to override some system-default dialog window behaviours.
     </p>
     <p>
         When a dialog window is opened, the content is positioned in a parent element that is appended to the body.
     </p>
     <p>
-        Importing one of BrowserAnimationsModule or NoopAnimationsModule is required. The first is the standard Angular
+        Importing either BrowserAnimationsModule or NoopAnimationsModule is required. The first is the standard Angular
         animation module, it animates content as expected. NoopAnimationsModule mocks the animations and does not render
         them, potentially increasing performance.
     </p>
