updating the code and document wordings
updating the code and document wordings

--- a/apps/docs/src/app/core/component-docs/info-label/info-label-docs.component.html
+++ b/apps/docs/src/app/core/component-docs/info-label/info-label-docs.component.html
@@ -8,7 +8,7 @@
 <label fd-form-label>Default Info label by passing the default message </label>
 <separator></separator>
 
-<fd-docs-section-title [id]="'filled'" [componentName]="'infolabel'">
+<fd-docs-section-title [id]="'infoLabelText'" [componentName]="'infolabel'">
 	Info label with text
 </fd-docs-section-title>
 <description> <code>fd-info-label fd-info-label--accent-color-1</code> modifier can be used to render a Text version of the Info label. </description>
@@ -19,7 +19,7 @@
 
 <separator></separator>
 
-<fd-docs-section-title [id]="'filled'" [componentName]="'infolabel'">
+<fd-docs-section-title [id]="'infoLabelTextIcon'" [componentName]="'infolabel'">
 	Info Label with text and icon
 </fd-docs-section-title>
 <description> <code>fd-info-label fd-info-label--accent-color-1 fd-info-label--icon</code> modifier can be used to render a icon with text version of the Info Label. </description>
@@ -30,7 +30,7 @@
 
 <separator></separator>
 
-<fd-docs-section-title [id]="'filled'" [componentName]="'infolabel'">
+<fd-docs-section-title [id]="'infoLabelNumeric'" [componentName]="'infolabel'">
 	Info label with numeric and only Icon
 </fd-docs-section-title>
 <description> <code>fd-info-label--numeric fd-info-label--only-icon</code> modifier can be used to render a numeric and icon only version of the badge. </description>
