--- a/apps/docs/src/app/core/component-docs/info-label/info-label-header/info-label-header.component.html
+++ b/apps/docs/src/app/core/component-docs/info-label/info-label-header/info-label-header.component.html
@@ -1,11 +1,11 @@
 <header>Info Label</header>
 <description>
-    <p>Info labels are used to indicate status. Colors, generally in combination with text, numeric and icon, are used to easily
-        highlight.</p>
-    <p> - Black is used to indicate default or inactive status </p>
-    <p> - It is primarily used to define the characterstic of the object</p>
+    <p>Info labels are used to indicate information of of a object. Colors, generally in combination with text, numeric and icon, are used to easily
+        highlight information label object.</p>
+    <p> - Different color options are available to define the status of the inforamtion. </p>
+    <p> - It is primarily used to define the characterstic of the information</p>
     <p> - Info Label is a small non-interactive numeric or text based control</p>
-    <p> - Diffrent color options are availabel to define the status of the object</p>
+    <p> - Black color info label is used to indicate default.</p>
 </description>
 <import module="InfoLabelModule"></import>
 
