fix(core) Create 'closestElement' function

--- a/apps/docs/src/app/core/component-docs/dialog/dialog-docs-header/dialog-docs-header.component.html
+++ b/apps/docs/src/app/core/component-docs/dialog/dialog-docs-header/dialog-docs-header.component.html
@@ -6,18 +6,18 @@
         that does not require a page.
     </p>
     <p>
-        Dialogs make use of a singleton service called DialogService. It provides the ability to open() dialog windows.
+        Dialogs make use of a singleton service called <code>DialogService</code>. It provides the ability to <code>open()</code> dialog windows.
     </p>
     <p>
-        The open() method accepts either a TemplateRef or Component as dialog content. In addition, you may also
-        provide a DialogConfig object to override some system-default dialog window behaviours.
+        The <code>open()</code> method accepts either a <code>TemplateRef</code> or <code>Component</code> as dialog content. In addition, you may also
+        provide a <code>DialogConfig</code> object to override some system-default dialog window behaviours.
     </p>
     <p>
         When a dialog window is opened, the content is positioned in a parent element that is appended to the body.
     </p>
     <p>
-        Importing either BrowserAnimationsModule or NoopAnimationsModule is required. The first is the standard Angular
-        animation module, it animates content as expected. NoopAnimationsModule mocks the animations and does not render
+        Importing either <code>BrowserAnimationsModule</code> or <code>NoopAnimationsModule</code> is required. The first is the standard Angular
+        animation module, it animates content as expected. <code>NoopAnimationsModule</code> mocks the animations and does not render
         them, potentially increasing performance.
     </p>
 </description>
