--- a/apps/docs/src/app/core/component-docs/dialog/dialog-docs.component.html
+++ b/apps/docs/src/app/core/component-docs/dialog/dialog-docs.component.html
@@ -10,7 +10,10 @@
     </ul>
     <b>DialogRef and DialogConfig reference needs to be passed to Dialog component</b> when using template based Dialog.
     To receive Dialog dismiss/close reasons subscribe to <code>afterClosed</code> observable.
-    Use <code>fd-dialog-footer-button</code> to wrap footer buttons and create space between them.
+    <ul>
+        <li>Use <code>fd-dialog-footer-button</code> to wrap footer buttons and create space between them.</li>
+        <li>Add <code>fd-dialog-decisive-button</code> to key dialog buttons like "Save" or "Cancel", to add proper styles and initial focus.</li>
+    </ul>
 </description>
 <component-example>
     <fd-dialog-open-template-example></fd-dialog-open-template-example>
