documentation module change

--- a/apps/docs/src/app/platform/component-docs/platform-menu-button/platform-menu-button-docs.component.html
+++ b/apps/docs/src/app/platform/component-docs/platform-menu-button/platform-menu-button-docs.component.html
@@ -1,9 +1,21 @@
-<fd-docs-section-title [id]="'def'" [componentName]="'MenuButton'">
+<fd-docs-section-title [id]="'def'" [componentName]="'MenuButtonComponent'">
     Menu Button Examples
 </fd-docs-section-title>
 
-<description>This example shows Regular MenuButton implementaion </description>
-<component-example [name]="'ex1'">
-    <fdp-platform-menu-button-standard-example></fdp-platform-menu-button-standard-example>
+<description>This example shows cozy MenuButton implementaion. </description>
+<component-example>
+    <fdp-platform-menu-button-cozy-example></fdp-platform-menu-button-cozy-example>
 </component-example>
-<code-example [exampleFiles]="standardMenuButton"></code-example>
+<code-example [exampleFiles]="cozyMenuButton"></code-example>
+
+<description>This example shows compact MenuButton implementaion </description>
+<component-example>
+    <fdp-platform-menu-button-compact-example></fdp-platform-menu-button-compact-example>
+</component-example>
+<code-example [exampleFiles]="compactMenuButton"></code-example>
+
+<description>This example shows MenuButton implementaion </description>
+<component-example>
+    <fdp-platform-menu-button-example></fdp-platform-menu-button-example>
+</component-example>
+<code-example [exampleFiles]="compactMenuButton"></code-example>
