--- a/libs/platform/src/lib/components/menu-button/menu-button.component.scss
+++ b/libs/platform/src/lib/components/menu-button/menu-button.component.scss
@@ -3,4 +3,9 @@
     overflow: hidden;
     text-overflow: ellipsis;
     display: inline-block;
+    vertical-align: bottom;
+}
+
+:host {
+    display: inline-block;
 }
