--- a/apps/docs/src/app/core/component-docs/button/button-docs.component.html
+++ b/apps/docs/src/app/core/component-docs/button/button-docs.component.html
@@ -1,7 +1,7 @@
 <fd-docs-section-title [id]="'Button-types'" [componentName]="'button'"> Button Types </fd-docs-section-title>
 <description>
-    The button component follows fundamental-styles for button. The default button type is "Default button", no modifier
-    is required. Use <code class="code-snippet">[fdType]=""</code> property to set button type.
+    The button component follows fundamental-styles for button guidelines. The default button type is "Default button", no modifier
+    is required. Use the <code class="code-snippet">[fdType]=""</code> property to set the button type.
 </description>
 <component-example>
     <fd-button-types-example></fd-button-types-example>
@@ -42,7 +42,7 @@
     Button State
 </fd-docs-section-title>
 <description>
-    'disabled' and 'selected' state can be achieved through native 'disabled' / 'aria-disabled' and 'aria-selected'
+    'disabled' and 'selected' states can be achieved through native 'disabled' / 'aria-disabled' and 'aria-selected'
     attributes.
 </description>
 <component-example>
@@ -53,9 +53,9 @@
 <separator></separator>
 
 <description
-    >The inputs for <code>button</code> will be translated into classes attributed to fundamental-styles guidelines.
-    <br />For example: <br />if <code>positive</code> is passed for <code>fdType</code>, the class
-    <code>fd-button--positive</code> will be added to the element. <br />if <code>compact</code> is passed for
+    >The inputs for <code>button</code> will be translated into classes attributed to the fundamental-styles guidelines.
+    <br />For example: <br />if <code>positive</code> is passed for <code>fdType</code>, the 
+    <code>fd-button--positive</code> class will be added to the element. <br />if <code>compact</code> is passed for
     <code>size</code>, the class <code>fd-button--compact</code> will be added to the element.
 </description>
 <separator></separator>
