--- a/apps/docs/src/app/core/component-docs/date-picker/examples/date-picker-complex-i18n-example/date-picker-complex-i18n-example.component.html
+++ b/apps/docs/src/app/core/component-docs/date-picker/examples/date-picker-complex-i18n-example/date-picker-complex-i18n-example.component.html
@@ -24,7 +24,7 @@
         >
         </fd-input-group>
         <fd-form-message type="help">
-            Full list of formats can be found in
+            The full list of formats can be found at
             <a href="https://angular.io/api/common/DatePipe" target="_blank">
                 Official Angular Documentation
             </a>
