--- a/apps/docs/src/app/core/component-docs/dialog/dialog-docs-header/dialog-docs-header.component.html
+++ b/apps/docs/src/app/core/component-docs/dialog/dialog-docs-header/dialog-docs-header.component.html
@@ -16,7 +16,7 @@
         When a dialog window is opened, the content is positioned in a parent element that is appended to the body.
     </p>
     <p>
-        Importing either <code>BrowserAnimationsModule</code> or <code>NoopAnimationsModule</code> is required. The first is the standard Angular
+        Importing either <code>BrowserAnimationsModule</code> or <code>NoopAnimationsModule</code> is required. <code>BrowserAnimationsModule</code> is the standard Angular
         animation module, it animates content as expected. <code>NoopAnimationsModule</code> mocks the animations and does not render
         them, potentially increasing performance.
     </p>
