--- a/apps/docs/src/app/core/component-docs/dialog/dialog-docs.component.html
+++ b/apps/docs/src/app/core/component-docs/dialog/dialog-docs.component.html
@@ -2,17 +2,17 @@
     Template based Dialog
 </fd-docs-section-title>
 <description>
-    The Dialog can be declared inside <code>ng-template</code> and opened with DialogService using template reference.
+    The Dialog can be declared inside the <code>ng-template</code> and opened with DialogService using the template reference.
     Each template based dialog can use the following context values:
     <ul>
         <li>DialogRef - <code>implicit</code></li>
         <li>DialogConfig - <code>dialogConfig</code></li>
     </ul>
-    <b>DialogRef and DialogConfig reference needs to be passed to Dialog component</b> when using template based Dialog.
-    To receive Dialog dismiss/close reasons subscribe to <code>afterClosed</code> observable.
+    <b> The DialogRef and DialogConfig references need to be passed to the Dialog component</b> when using template based Dialog.
+    To receive Dialog dismiss/close reasons subscribe to the <code>afterClosed</code> observable.
     <ul>
         <li>Use <code>fd-dialog-footer-button</code> to wrap footer buttons and create space between them.</li>
-        <li>Add <code>fd-dialog-decisive-button</code> to key dialog buttons like "Save" or "Cancel", to add proper styles and initial focus.</li>
+        <li>Add <code>fd-dialog-decisive-button</code> to key dialog buttons like "Save" or "Cancel" to add proper styles and initial focus.</li>
     </ul>
 </description>
 <component-example>
@@ -26,9 +26,9 @@
     Component based Dialog
 </fd-docs-section-title>
 <description>
-    To open a component based Dialog provide component class to the DialogService open method. Inject
+    To open a component based Dialog provide the component class to the DialogService open method. Inject the
     <code>DialogRef</code> dependency inside the component to access Dialog methods and data. Data available in <code>DialogRef</code>
-    can be provided in <code>DialogConfig</code> object passed as an argument to <code>DialogService.open()</code>
+    can be provided in the <code>DialogConfig</code> object and passed as an argument to the <code>DialogService.open()</code>
     method.
 </description>
 <component-example>
@@ -42,7 +42,7 @@
     Dialog state
 </fd-docs-section-title>
 <description>
-    Dialog state can be controlled with <code>DialogRef</code>, providing such features as:
+    The dialog state can be controlled by using <code>DialogRef</code>, providing such features as:
     <ul>
         <li><code>DialogRef.hide()</code> - visually hiding the Dialog window</li>
         <li><code>DialogRef.close()</code> - closing the Dialog window</li>
@@ -61,7 +61,7 @@
     Dialog configuration
 </fd-docs-section-title>
 <description>
-    Dialog behavior can be configured using <code>DialogConfig</code> object passed as an argument to <code>DialogService.open()</code>
+    Dialog behavior can be configured using the <code>DialogConfig</code> object passed as an argument to the <code>DialogService.open()</code>
     method. Passing <code>DialogConfig</code> overrides specified behaviours of the Dialog component.
 </description>
 <component-example>
@@ -70,7 +70,7 @@
 <code-example [exampleFiles]="customConfiguration"></code-example>
 
 <description>
-    Default values used by the Dialog can be specified by providing <code>DIALOG_DEFAULT_CONFIG</code> token value.<br/><br/>
+    The default values used by the Dialog component can be specified by providing the <code>DIALOG_DEFAULT_CONFIG</code> token value.<br/><br/>
     <code>
         @NgModule({{'{'}}
             provide: [
@@ -100,10 +100,10 @@
 </fd-docs-section-title>
 <description>
     To display the Dialog component in mobile mode, use the <code>DialogConfig.mobile</code> property.
-    Dialog on mobile devices takes up full viewport and adjusts its header and footer. To create additional spacing around
-    Dialog use the <code>DialogConfig.mobileOuterSpacing</code> property.
+    Dialog on mobile devices uses the full viewport and adjusts its header and footer accordingly. To create additional spacing around the
+    Dialog, use the <code>DialogConfig.mobileOuterSpacing</code> property.
     <br/><br/>
-    To achieve full-screen dialog without mobile mode features use <code>DialogConfig.fullScreen</code> property.
+    To achieve full-screen dialog without mobile mode features, use the <code>DialogConfig.fullScreen</code> property.
 </description>
 <component-example>
     <fd-dialog-mobile-example></fd-dialog-mobile-example>
@@ -124,8 +124,8 @@
         <li>Subheader - <code>fdTemplate="subheader"</code></li>
         <li>Footer - <code>fdTemplate="footer"</code></li>
     </ul>
-    Custom templates are embedded views for Bar Component so it is possible to use Bar Component features inside them. <br/>
-    For complex templates you may use <code>fd-bar-element</code> as equivalent  of <code>fd-dialog-footer-button</code>.
+    Custom templates are embedded views for the Bar Component so it is possible to use Bar Component features inside them. <br/>
+    For complex templates you may use the <code>fd-bar-element</code> as an equivalent of the <code>fd-dialog-footer-button</code>.
 </description>
 <component-example>
     <fd-dialog-complex-example></fd-dialog-complex-example>
@@ -141,7 +141,7 @@
     The DialogService supports limitless stacked dialogs. Each can be closed individually and there is no specific
     closing order.
     <br/><br/>
-    In the example below, this is accomplished by using components as content however this can also be achieved using templates.
+    In the example below, this is accomplished by using components as content however this can also be achieved by using templates.
 </description>
 <component-example>
     <fd-dialog-stacked-example></fd-dialog-stacked-example>
